Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-36993

Missing text with OpenGL Core profiles

    XMLWordPrintable

Details

    • Bug
    • Resolution: Done
    • P1: Critical
    • None
    • 5.3.0
    • None
    • Ubuntu 13.10, NVidia GT630, driver 319.32

    Description

      Using an OpenGL core profile results in missing text in many controls.

      See attached picture. There is no easy way to reproduce it with Controls' own examples since it is not yet possible to change surface format for a Window element (QTBUG-36392). For the sake of the example I just changed QQuickWindow to request 3.2 core profile always.

      Update: This only happens when using Text.NativeRendering. So most likely a Quick/SceneGraph bug.

      Attachments

        Issue Links

          No reviews matched the request. Check your Options in the drop-down menu of this sections header.

          Activity

            People

              lagocs Laszlo Agocs
              lagocs Laszlo Agocs
              Votes:
              0 Vote for this issue
              Watchers:
              3 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved:

                Gerrit Reviews

                  There are no open Gerrit changes